--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
   "devDependencies": {
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
-    "@types/redux-logger": "^3.0.7"
+    "@types/redux-logger": "^3.0.7",
+    "gh-pages": "^2.1.1"
   },
   "eslintConfig": {
     "extends": "react-app"
