--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sorta-cart-admin",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "private": true,
   "homepage": "https://marshlife-art.github.io/sorta-cart-admin/",
   "scripts": {
@@ -15,8 +15,6 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.36",
-    "@types/react": "latest",
-    "@types/react-dom": "latest",
     "material-table": "^1.54.2",
     "react": "latest",
     "react-dom": "latest",
@@ -29,10 +27,18 @@
     "typescript": "latest"
   },
   "devDependencies": {
+    "@types/react": "latest",
+    "@types/react-dom": "latest",
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-logger": "^3.0.7",
-    "gh-pages": "^2.1.1"
+    "@types/jest": "24.0.25",
+    "@types/node": "13.1.2",
+    "@types/redux-mock-store": "^1.0.1",
+    "fake-indexeddb": "^3.0.0",
+    "gh-pages": "^2.1.1",
+    "jest": "^24.9.0",
+    "redux-mock-store": "^1.5.4"
   },
   "eslintConfig": {
     "extends": "react-app"
