--- a/package.json
+++ b/package.json
@@ -1,8 +1,9 @@
 {
   "name": "sorta-cart-admin",
-  "version": "0.0.3",
+  "version": "0.0.4",
   "private": true,
   "homepage": "https://admin.marshcoop.org/",
+  "repository": "github:marshlife-art/sorta-cart-admin",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
