--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.5.1",
     "@material-ui/lab": "^4.0.0-alpha.36",
+    "date-fns": "^2.16.1",
     "json2csv": "^4.5.4",
     "material-table": "^1.54.2",
     "react": "latest",
