--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "material-table": "^1.54.2",
     "react": "latest",
     "react-dom": "latest",
+    "react-markdown": "^5.0.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
     "react-scripts": "latest",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
+    "remark-gfm": "^1.0.0",
     "typescript": "latest"
   },
   "devDependencies": {
