--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sorta-cart-admin",
-  "version": "0.0.9",
+  "version": "0.1.0",
   "private": true,
   "homepage": "https://admin.marshcoop.org/",
   "repository": "github:marshlife-art/sorta-cart-admin",
@@ -26,7 +26,7 @@
     "react-markdown": "^5.0.3",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "latest",
+    "react-scripts": "^4.0.1",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
@@ -39,12 +39,10 @@
     "@types/react-redux": "^7.1.5",
     "@types/react-router-dom": "^5.1.3",
     "@types/redux-logger": "^3.0.7",
-    "@types/jest": "24.0.25",
     "@types/node": "13.1.2",
     "@types/redux-mock-store": "^1.0.1",
     "fake-indexeddb": "^3.0.0",
     "gh-pages": "^2.1.1",
-    "jest": "^24.9.0",
     "redux-mock-store": "^1.5.4"
   },
   "eslintConfig": {
