--- a/package.json
+++ b/package.json
@@ -13,36 +13,38 @@
     "deploy": "gh-pages -d build"
   },
   "dependencies": {
-    "@bugsnag/js": "^6.5.0",
-    "@bugsnag/plugin-react": "^6.5.0",
+    "@bugsnag/js": "^7.14.1",
+    "@bugsnag/plugin-react": "^7.14.0",
     "@material-ui/core": "latest",
-    "@material-ui/icons": "^4.5.1",
-    "@material-ui/lab": "^4.0.0-alpha.36",
-    "date-fns": "^2.16.1",
-    "json2csv": "^4.5.4",
-    "material-table": "^1.54.2",
+    "@material-ui/icons": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.60",
+    "date-fns": "^2.27.0",
+    "json2csv": "^5.0.6",
+    "material-table": "^1.69.3",
     "react": "latest",
     "react-dom": "latest",
-    "react-markdown": "^5.0.3",
-    "react-redux": "^7.1.3",
-    "react-router-dom": "^5.1.2",
-    "react-scripts": "^4.0.1",
-    "redux": "^4.0.5",
+    "react-markdown": "^7.1.1",
+    "react-redux": "^7.2.6",
+    "react-router-dom": "^5.1",
+    "react-scripts": "^5.0.0",
+    "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "remark-gfm": "^1.0.0",
+    "redux-thunk": "^2.4.1",
+    "remark-gfm": "^3.0.1",
     "typescript": "latest"
   },
   "devDependencies": {
+    "@types/jest": "^27.0.3",
+    "@types/node": "17.0.0",
     "@types/react": "latest",
     "@types/react-dom": "latest",
-    "@types/react-redux": "^7.1.5",
-    "@types/react-router-dom": "^5.1.3",
-    "@types/redux-logger": "^3.0.7",
-    "@types/node": "13.1.2",
-    "@types/redux-mock-store": "^1.0.1",
-    "fake-indexeddb": "^3.0.0",
-    "gh-pages": "^2.1.1",
+    "@types/react-redux": "^7.1.20",
+    "@types/react-router-dom": "^5.1",
+    "@types/redux-logger": "^3.0.9",
+    "@types/redux-mock-store": "^1.0.3",
+    "@types/redux-thunk": "^2.1.0",
+    "fake-indexeddb": "^3.1.7",
+    "gh-pages": "^3.2.3",
     "redux-mock-store": "^1.5.4"
   },
   "eslintConfig": {
