--- a/package.json
+++ b/package.json
@@ -31,9 +31,11 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "remark-gfm": "^3.0.1",
+    "swr": "^1.1.1",
     "typescript": "latest"
   },
   "devDependencies": {
+    "@supabase/supabase-js": "^1.28.5",
     "@types/jest": "^27.0.3",
     "@types/node": "17.0.0",
     "@types/react": "latest",
