--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "date-fns": "^2.27.0",
     "json2csv": "^5.0.6",
     "material-table": "^1.69.3",
+    "papaparse": "^5.3.1",
     "react": "latest",
     "react-dom": "latest",
     "react-markdown": "^7.1.1",
@@ -38,6 +39,7 @@
     "@supabase/supabase-js": "^1.28.5",
     "@types/jest": "^27.0.3",
     "@types/node": "17.0.0",
+    "@types/papaparse": "^5.3.1",
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-redux": "^7.1.20",
