--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@supabase/supabase-js": "^1.28.5",
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^27.0.3",
+    "@types/json2csv": "^5.0.3",
     "@types/node": "17.0.0",
     "@types/papaparse": "^5.3.1",
     "@types/react": "latest",
