--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "src/services"]
 	path = src/services
-	url = https://github.com/marshlife-art/sorta-cart-services.git
+	url = git@github.com:marshlife-art/sorta-cart-services.git
