--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": "/admin",
   "repository": "github:marshlife-art/sorta-cart-admin",
+  "type": "module",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
@@ -11,7 +12,10 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build && cp CNAME build/",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build",
+    "story:build": "node story/build.js",
+    "story:watch": "STORY_WATCH=yesplz node story/build.js",
+    "story:server": "python3 -m http.server -d story/build/"
   },
   "dependencies": {
     "@bugsnag/js": "^7.14.1",
@@ -36,7 +40,9 @@
     "typescript": "latest"
   },
   "devDependencies": {
+    "@mdx-js/esbuild": "^2.0.0-rc.2",
     "@supabase/supabase-js": "^1.29.1",
+    "@reduxjs/toolkit": "^1.7.1",
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^27.4.0",
     "@types/json2csv": "^5.0.3",
@@ -50,7 +56,8 @@
     "@types/redux-thunk": "^2.1.32",
     "fake-indexeddb": "^3.1.7",
     "gh-pages": "^3.2.3",
-    "redux-mock-store": "^1.5.4"
+    "redux-mock-store": "^1.5.4",
+    "remark-gfm": "^3.0.1"
   },
   "eslintConfig": {
     "extends": "react-app"
