--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
     "eject": "react-scripts eject",
     "predeploy": "npm run build && cp CNAME build/",
     "deploy": "gh-pages -d build",
-    "story:build": "node story/build.js",
-    "story:watch": "STORY_WATCH=yesplz node story/build.js",
+    "story:build": "USE_LOCAL_SERVICES=true node story/build.js",
+    "story:watch": "USE_LOCAL_SERVICES=true STORY_WATCH=yesplz node story/build.js",
     "story:server": "python3 -m http.server -d story/build/"
   },
   "dependencies": {
@@ -23,6 +23,9 @@
     "@material-ui/core": "latest",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.60",
+    "@mui/icons-material": "^5.3.0",
+    "@mui/material": "^5.3.0",
+    "@mui/styled-engine-sc": "^5.3.0",
     "date-fns": "^2.28.0",
     "handlebars": "^4.7.7",
     "json2csv": "^5.0.6",
@@ -36,13 +39,14 @@
     "redux": "^4.1.2",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
+    "styled-components": "^5.3.3",
     "swr": "^1.1.2",
     "typescript": "latest"
   },
   "devDependencies": {
     "@mdx-js/esbuild": "^2.0.0-rc.2",
-    "@supabase/supabase-js": "^1.29.1",
     "@reduxjs/toolkit": "^1.7.1",
+    "@supabase/supabase-js": "^1.29.1",
     "@types/handlebars": "^4.1.0",
     "@types/jest": "^27.4.0",
     "@types/json2csv": "^5.0.3",
@@ -51,13 +55,16 @@
     "@types/react": "latest",
     "@types/react-dom": "latest",
     "@types/react-redux": "^7.1.22",
+    "@types/react-window": "^1.8.5",
     "@types/redux-logger": "^3.0.9",
     "@types/redux-mock-store": "^1.0.3",
     "@types/redux-thunk": "^2.1.32",
+    "@types/styled-components": "^5.1.20",
     "fake-indexeddb": "^3.1.7",
     "gh-pages": "^3.2.3",
     "redux-mock-store": "^1.5.4",
-    "remark-gfm": "^3.0.1"
+    "remark-gfm": "^3.0.1",
+    "react-window": "^1.8.6"
   },
   "eslintConfig": {
     "extends": "react-app"
